# Projet_G

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  START_CODEX.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  settings.py
app/application/: email_ingestion_service.py  feedback_service.py  listing_service.py  map_service.py  property_service.py  search_service.py
app/domain/: deduplication.py  entities.py  enums.py  map.py  scoring.py  value_objects.py
app/infrastructure/db/: models.py  session.py
app/ui/pages/: var_map.py
config/: preferences.initial.yaml
docs/: ARCHITECTURE.md  BACKLOG.md  DATA_MODEL.md  DECISIONS.md  DEFINITION_OF_SUCCESS.md  MVP_SPEC.md  PRODUCT_CONTEXT.md  SCORING_AND_LEARNING.md
examples/: listing.example.json
migrations/: env.py
migrations/versions/: 20260717_0001_initial_property_listing.py  20260720_0002_email_ingestion.py  20260720_0003_listing_public_id.py  20260720_0004_sequential_listing_public_id.py  20260720_0005_listing_extracted_fields.py  20260720_0006_property_extracted_fields.py  20260720_0007_listing_page_html_archive.py  20260722_0008_listing_html_archives.py  20260722_0009_listing_html_archive_assets.py
scripts/: check_imap.py
tests/: conftest.py
tests/integration/: test_email_ingestion_flow.py  test_property_listing_flow.py
tests/unit/: test_browser_preview.py  test_email_parser.py  test_imap_client.py  test_listing_page_parser.py  test_local_html_archive.py  test_money.py  test_page_availability.py  test_settings.py  test_var_communes.py
(+13 files in other folders)
