[project]
name = "gite-agent"
version = "0.1.0"
description = "Cockpit personnel de veille immobiliere pour un projet de gite."
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["config*", "docs*", "examples*", "migrations*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]
mypy_path = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider --basetemp .pytest-tmp"
